feature: update concurrency-structured examples